# TidyTree

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
assets/: index-B4S0Gbz7.js  index-BAhXCmrG.js  index-BJbMjo72.js  index-BcXJ4Xmo.css  index-CBezo_ZM.css  index-Ddgx61C2.js  index-DzLtwNVG.js  wasm_bg-CeP3UaH_.wasm  wasm_bg-DFUb8IaF.wasm  wasm_bg-Do8SgA5d.wasm
public/: index.html
rust/: .gitignore  Cargo.toml  LICENSE  Makefile
rust/crates/tidy-tree/: Cargo.toml
rust/crates/wasm/: Cargo.toml
rust/crates/wasm/src/: lib.rs
rust/src/: contour.rs  layout.rs  line.rs  main.rs  mock_org_chart_data.rs  node.rs  org_chart.rs  tidy_tree.rs  tidy_tree_impl.rs  utils.rs
rust/src/layout/: basic_layout.rs  linked_y_list.rs  tidy_layout.rs  tidy_layout_utils.rs
rust/src/utils/: generate_id.rs  mock_org_chart_data.rs
rust/tidy-tree/: Cargo.toml
rust/tidy-tree/src/: line.rs
rust/wasm/: .gitignore
src/: App.tsx  index.css  index.tsx  main.tsx  vite-env.d.ts
src/Component/Chart/: Chart.tsx
src/Component/Line/: Line.module.css  Line.tsx
src/Component/SemanticChart/: SemanticChart.module.css  (+2 more)
src/OrgChart/: Line.ts  Node.ts  OrgChart.ts  OrgChartType.ts  TidyTree.ts  TidyTreeType.ts  utils.ts
src/Page/: PerformanceCompare.css  PerformanceCompare.tsx
src/TidyTree/: Contour.ts  DoublyLinkedList.ts  Line.ts  LinkedYList.ts  Node.ts  TidyInfo.ts  TidyTree.ts  TidyTreeType.ts  TreeUtils.ts  utils.ts
src/TidyTreeRust/: TidyComponent.tsx  dispose.ts  tidy.ts
src/Utils/: execution_time.ts  generate_id.ts  mock_org_chart_data.ts
(+31 files in other folders)
