[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
tidy-tree = { path = "../tidy-tree" }

[dev-dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"
wasm-bindgen-test = "0.3.42"

[dependencies.web-sys]
version = "0.3.69"
features = [
    'Window',
    'Performance',
    'PerformanceTiming'
]
